# batch_face_cropper

./: README.md  pyproject.toml
src/: batch_crop.py  face_region_extractor.py
tests/: test_face_region_extractor.py
